NOOP: Rich layout editor: Misc fixes * Trying to drop an item before itself caused it to disappear; don't do that * Fix z-indexes for various add buttons * Fix block/inline styles for IE7 * Make rows & columns only draggable by their handles * Make newly-added rows get hooked up properly * Make sure drop indicator is cleared on drag end, in case it got stuck during a drag * Make sure draggable items are z-indexed over everything else on the page

--- a/app/styles/rich-render-types.sass
+++ b/app/styles/rich-render-types.sass
@@ -2,6 +2,8 @@
   .richColumn
     display: inline-block
     vertical-align: top
+    .ie7 &
+      display: inline
 
   .richLine
     overflow: hidden
